--- a/styles/index.css
+++ b/styles/index.css
@@ -1,9 +1,86 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-family: Verdana, sans-serif;
+  font-size: 15px;
+  line-height: 1.5;
+  overflow-x: hidden;
+}
+
 body {
-  background-color: powderblue;
+  font-family: "Lato", sans-serif;
 }
-h1 {
-  color: blue;
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Segoe UI", Arial, sans-serif;
+  font-weight: 400;
+  margin: 10px 0;
 }
+
 p {
-  color: red;
+  margin: 15px 0;
+}
+
+img {
+  vertical-align: bottom;
+}
+
+header {
+  display: flex;
+  height: 60px;
+  background-color: black;
+}
+
+main {
+  margin: 10px 0;
+  padding: 0 50px;
+}
+
+footer {
+  display: flex;
+  height: 100px;
+  background-color: black;
+}
+
+.white {
+  color: white;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 100%;
+}
+
+.col {
+  display: flex;
+  flex-direction: column;
+}
+
+.group-img {
+  display: flex;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.75);
+}
+
+.img-wrapper {
+  /* width: 1000px; */
+}
+
+.group-detail__title {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.group-detail__desc {
+  text-align: justify;
 }
