--- a/members/19127122/19127122.css
+++ b/members/19127122/19127122.css
@@ -1,114 +1,130 @@
-@import url('https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    list-style: none;
-    font-family: 'Josefin Sans', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  font-family: "Josefin Sans", sans-serif;
 }
 
 body {
-    background-color: #f3f3f3;
+  background-color: #f3f3f3;
+}
+
+.back-btn {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: white;
+  border: 0;
+  padding: 5px 10px;
+  cursor: pointer;
+  border-radius: 4px;
+  box-shadow: 3px 3px 5px 0 rgba(0, 0, 0, 0.2);
+}
+
+.back-btn:hover {
+  background-color: #e6e3e3;
 }
 
 .wrapper {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 700px;
-    height: 550px;
-    display: flex;
-    box-shadow: 0 1px 20px 0 rgba(69, 90, 100, .08);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 700px;
+  height: 550px;
+  display: flex;
+  box-shadow: 0 1px 20px 0 rgba(69, 90, 100, 0.08);
 }
 
 .wrapper .left {
-    width: 35%;
-    background: linear-gradient(to right, #01a9ac, #01dbdf);
-    padding: 30px 25px;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    text-align: center;
-    color: #fff;
+  width: 35%;
+  background: linear-gradient(to right, #01a9ac, #01dbdf);
+  padding: 30px 25px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  text-align: center;
+  color: #fff;
 }
 
 .wrapper .left img {
-    border-radius: 5px;
-    margin-bottom: 10px;
+  border-radius: 5px;
+  margin-bottom: 10px;
 }
 
 .wrapper .left h4 {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .wrapper .left p {
-    font-size: 12px;
+  font-size: 12px;
 }
 
 .wrapper .right {
-    width: 65%;
-    background: #fff;
-    padding: 30px 25px;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
+  width: 65%;
+  background: #fff;
+  padding: 30px 25px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
 .wrapper .right .info_top,
 .wrapper .right .info_bottom {
-    margin-bottom: 25px;
+  margin-bottom: 25px;
 }
 
 .wrapper .right .info_top h3,
 .wrapper .right .info_bottom h3 {
-    margin-bottom: 15px;
-    padding-bottom: 5px;
-    border-bottom: 1px solid #e0e0e0;
-    color: #353c4e;
-    text-transform: uppercase;
-    letter-spacing: 5px;
+  margin-bottom: 15px;
+  padding-bottom: 5px;
+  border-bottom: 1px solid #e0e0e0;
+  color: #353c4e;
+  text-transform: uppercase;
+  letter-spacing: 5px;
 }
 
 .wrapper .right .info_data_top,
 .wrapper .right .info_data_bottom {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .wrapper .right .info_data_top .data,
 .wrapper .right .info_data_bottom .data {
-    width: 45%;
+  width: 45%;
 }
 
 .wrapper .right .info_data_top .data h4,
 .wrapper .right .info_data_bottom .data h4 {
-    color: #353c4e;
-    margin-bottom: 5px;
+  color: #353c4e;
+  margin-bottom: 5px;
 }
 
 .wrapper .right .info_data_top .data p,
 .wrapper .right .info_data_bottom .data p {
-    font-size: 13px;
-    margin-bottom: 10px;
-    color: #919aa3;
+  font-size: 13px;
+  margin-bottom: 10px;
+  color: #919aa3;
 }
 
 .wrapper .social_media ul {
-    display: flex;
+  display: flex;
 }
 
 .wrapper .social_media ul li {
-    width: 45px;
-    height: 45px;
-    background: linear-gradient(to right, #01a9ac, #01dbdf);
-    margin-right: 10px;
-    border-radius: 5px;
-    text-align: center;
-    line-height: 45px;
+  width: 45px;
+  height: 45px;
+  background: linear-gradient(to right, #01a9ac, #01dbdf);
+  margin-right: 10px;
+  border-radius: 5px;
+  text-align: center;
+  line-height: 45px;
 }
 
 .wrapper .social_media ul li a {
-    color: #fff;
-    display: block;
-    font-size: 18px;
+  color: #fff;
+  display: block;
+  font-size: 18px;
 }
