--- a/members/20127577/20127577.css
+++ b/members/20127577/20127577.css
@@ -12,6 +12,22 @@ body {
   background-color: #f3f3f3;
 }
 
+.back-btn {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: white;
+  border: 0;
+  padding: 5px 10px;
+  cursor: pointer;
+  border-radius: 4px;
+  box-shadow: 3px 3px 5px 0 rgba(0, 0, 0, 0.2);
+}
+
+.back-btn:hover {
+  background-color: #e6e3e3;
+}
+
 .wrapper {
   position: absolute;
   top: 50%;
