--- a/members/20127583/20127583.css
+++ b/members/20127583/20127583.css
@@ -41,7 +41,7 @@ body {
 
 .wrapper .left {
   width: 35%;
-  background: linear-gradient(to right, #01a9ac, #01dbdf);
+  background: linear-gradient(to right, #8d01ac, #df017b);
   padding: 30px 25px;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
@@ -116,7 +116,7 @@ body {
 .wrapper .social_media ul li {
   width: 45px;
   height: 45px;
-  background: linear-gradient(to right, #01a9ac, #01dbdf);
+  background: linear-gradient(to right, #8d01ac, #df017b);
   margin-right: 10px;
   border-radius: 5px;
   text-align: center;
