--- a/styles/index.css
+++ b/styles/index.css
@@ -37,12 +37,12 @@ img {
 header {
   display: flex;
   height: 60px;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.85);
 }
 
 main {
   margin: 10px 0;
-  padding: 0 50px;
+  padding: 0 150px;
 }
 
 footer {
@@ -76,9 +76,15 @@ footer {
   /* width: 1000px; */
 }
 
+.group-title {
+  font-size: 32px;
+  font-weight: bold;
+  text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.25);
+  margin: 20px 0 5px;
+}
+
 .group-detail__title {
   text-align: center;
-  margin-top: 20px;
 }
 
 .group-detail__desc {
